added the event component

--- a/app/globals.css
+++ b/app/globals.css
@@ -37,7 +37,7 @@
     --dashboard-green: 123 48% 33%;
     --dashboard-green-light: 123 48% 50%;
     --dashboard-success: 123 48% 45%;
-    --dashboard-gray: 25 20% 17%;
+    --dashboard-gray: 25% 37% 45%;
 
     /* BioVision specific colors */
     --biovision-dark: 25 20% 17%;
